--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# API / key files
+
+Api.swift
+*/Api.swift
+Keys.swift
+*/Keys.swift
+ApiKeys.swift
+*/ApiKeys.swift
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
