fastlane, cell manager, network activity indicator

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ ApiKeys.swift
 APIKeys.swift
 */APIKeys.swift
 
+/screenshots
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
