some store kit stuffs

--- a/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
+++ b/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
@@ -50,6 +50,9 @@
             ReferencedContainer = "container:ec3730.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../ec3730/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
