--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,10 @@ opt_in_rules: # some rules are turned off by default, so you need to opt-in
 # only_rules: # delete `disabled_rules` & `opt_in_rules` if using this
 #   - empty_parameters
 #   - vertical_whitespace
+included:
+- ec3730
+- ec3730Tests
+- ec3730UITests
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - fastlane
   - "**/.build/"
