Crash in SwiftPingController swifty ping
App freeze on slow network when click on ping. Core data concurrency issue catch block placed. Need to fix concurrency issue in whole app. Add argument for core data concurrency debugging

--- a/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
+++ b/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
@@ -70,6 +70,12 @@
             ReferencedContainer = "container:ec3730.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <StoreKitConfigurationFileReference
          identifier = "../ec3730/Configuration.storekit">
       </StoreKitConfigurationFileReference>
