Add source view in SwiftUI

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ APIKeys.swift
 */APIKeys.swift
 
 /screenshots
+
+.DS_Store
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
