improved purchase cell view

--- a/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
+++ b/ec3730.xcodeproj/xcshareddata/xcschemes/ec3730.xcscheme
@@ -76,6 +76,9 @@
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
+      <StoreKitConfigurationFileReference
+         identifier = "../ec3730/Store.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
